# engen-agent

./: .env-mock  .env.example  .gitignore  CatalogAPI ServiceNow Integration Axway.docx  Dockerfile  E2E_TESTING.md  SERVICENOW_WEBHOOK_AUTH.md  WEBHOOK_SERVICE_WORKFLOW.md  accessreq.yaml  axway-webhook-config.yaml  build.gradle  build.gradle.kts.backup  delete-and-apply-accessreq.sh  docker-compose.yml  gradle.properties  hook.yaml  servicenowcatalogext-servicenowcatalogext-2025-10-29-r-0.json  setup-axway-webhook.sh  start-webhook-service.sh  test-servicenow-oauth.sh
certs/: private_key_base64.txt
scripts/: generate-servicenow-jwt-keys.sh
src/main/java/com/engen/webhookservice/: WebhookServiceApplication.java
src/main/java/com/engen/webhookservice/config/: EmailTemplateConfig.java  OAuthStartupHealthCheck.java  RestTemplateConfig.java  SecurityConfig.java  WebhookAuthenticationFilter.java  YamlPropertySourceFactory.java
src/main/java/com/engen/webhookservice/controller/: WebhookController.java
src/main/java/com/engen/webhookservice/dto/: AxwayWebhookEvent.java  ServiceNowWebhookEvent.java  WebhookEvent.java
src/main/resources/: application-dev.yml  application-prod.yml  application.yml  email-templates.yml
test-scripts/: test-approval-workflow.sh  test-assetrequest-webhook.sh  test-axway-native-format.sh  test-axway-webhooks.sh  test-e2e-approval-flow.sh  test-e2e-interactive.sh  test-highmark-catalog.sh  test-servicenow-webhooks.sh
test-scripts/mock-server/: README.md  mock_server.py  pyproject.toml
(+11 files in other folders)
