[project]
name = "webhook-mock-server"
version = "0.1.0"
description = "Mock Axway Amplify + Highmark OAuth/Catalog server for webhook-service end-to-end testing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mock-server = "mock_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["mock_server.py"]

[tool.hatch.build.targets.wheel.sources]
"mock_server.py" = "mock_server.py"
